--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ With some creativity, you can apply the power of collections to nearly every are
 	  <div class="accordion-group">
 	    <div class="accordion-heading">
 	      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-		What systems does Collectr support?
+		What platforms does Collectr support?
 	      </a>
 	    </div>
 	    <div id="collapseTwo" class="accordion-body collapse">
