--- a/index.html
+++ b/index.html
@@ -1,241 +1,282 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Collectr Bitstarter</title>
+    <title>Collectr</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
-    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
+    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">    
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" rel="stylesheet" type="text/css">
-    <!-- <link type="text/css" rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css"> -->
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" 
+          rel="stylesheet" type="text/css">
     <style type="text/css">
+
       /* Large desktop */
-      @media (min-width: 980px) {
-      body {
-      padding-top: 60px;
+      @media (min-width: 980px) { 
+        body {
+         padding-top: 60px;
+        }
+       .linediv-l {
+         border-right: 1px white solid;
+        }
+       .linediv-r {
+         border-left: 1px white solid;
+       }
       }
-      .linediv-l {
-      border-right: 1px white solid;
-      }
-      .linediv-r {
-      border-left: 1px white solid;
-      }
-      }
-      
+
       /* Landscape phones and down */
-      @media (max-width: 480px) {
-      .copy {
-      padding: 2.5% 10%;
-      }
-      .linediv-l {
-      border-bottom: 1px white solid;
-      }
-      .linediv-r {
-      border-top: 1px white solid;
-      }
+      @media (max-width: 480px) { 
+       .copy {
+         padding: 2.5% 10%;
+       }
+       .linediv-l {
+         border-bottom: 1px white solid;
+       }
+       .linediv-r {
+         border-top: 1px white solid;
+       }
       }
 
       /* All form factors */
 
-      /*Main body and headings */
-      body {
-      font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+      /* Main body and headings */
+      body{
+        font-family: 'Open Sans', Helvetica, Arial, sans-serif;
       }
       .heading, .subheading {
-      font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
-      text-align: center;
+        font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+        text-align: center;
       }
       p.lead {
-      padding-top: 1.5%;
-      font-size: 24px;
-      line-height: 30px;
+        padding-top: 1.5%;
+        font-size: 24px;
+        line-height: 30px;
       }
       p {
-      font-size: 18px;
-      line-height: 24px;
+        font-size: 18px;
+        line-height: 24px;
       }
 
-      /* Video pitch and action */
+      /* Video pitch and Action */
       .pitch {
-      padding: 2.5% 0%;
+        padding: 2.5% 0%;
       }
       .order {
-      padding: 2% 0%;
+        padding: 2% 0%;
       }
       .actions {
-      background-color: #343434;
-      padding 3% 0%;
+        background-color: #343434;
+        padding: 3% 0%;
       }
       .video, .thermometer, .order, .social, .statistics {
-      text-align: center;
+        text-align: center;
       }
       .statistics h3, .statistics p {
-      color: white;
+        color: white;
       }
 
-      /*Marketing Copy and Footer*/
+      /* Marketing Copy and Footer */
       .copy {
-      padding-top: 2.5%;
-      padding-bottom: 2.5%;
-      text-align: justify;
+        padding-top: 2.5%;
+        padding-bottom: 2.5%;
+        text-align: justify;
       }
       .asset {
-      padding 2.5% 0%;
+        padding: 2.5% 0%;
       }
       .footer {
-      color: #cccccc;
-      text-align: center;
+        color: #cccccc;
+        text-align: center;
       }
       .footer p {
-      font-size: 11px;
+        font-size: 11px;
       }
       .footer a {
-      color: #ccccff;
+        color: #ccccff;
       }
-      </style>
-    </head>
+    </style>
+  </head>
   <body>
-    <!-- Mobile-friendly navbar -->
+
+    <!-- Mobile-friendly navbar adapted from example. -->
+    <!-- http://twitter.github.io/bootstrap/examples/starter-template.html -->
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
-	<div class="container">
-	  <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-	    <span class="icon-bar"></span>
-	    <span class="icon-bar"></span>
-	    <span class="icon-bar"></span>
-	  </button>
-	  <a class="brand" href="#">Bitstarter</a>
-	  <div class="nav-collapse collapse">
-	    <ul class="nav">
-	      <li class="active"><a href="#">Home</a></li>
-	      <li><a href="#about">About<a/></li>
-	      <li><a href="#contact">Contact</a></li>
-	    </ul>
-	  </div>><!--/.nav-collapse -->
-	</div
+        <div class="container">
+          <button type="button" class="btn btn-navbar"
+                  data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="brand" href="#">Collectr</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
       </div>
     </div>
-    <!--Use row-fluid inside containers to achieve resizable layout-->
+
+    <!-- We use row-fluid inside containers to achieve a resizable layout. -->
+    <!-- blogs.endjin.com/2013/04/tips-for-implementing-responsive-designs-using-bootstrap/ -->
+    <!-- http://stackoverflow.com/a/12270322 -->
     <div class="container">
+      <!-- Font and paired font of .heading/.subheading and body from Google Fonts -->
+      <!-- www.google.com/fonts/specimen/Ubuntu -->
+      <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
-	<div class="span12">
-	  <h1>Product</h1>
-	</div>
-      </div>
+        <div class="span12">
+          <h1>Collectr: Development Version</h1>
+        </div>
+      </div> 
       <div class="row-fluid subheading">
-	<div class="span12">
-	  <p class="lead"> Collectr allows you to harness the power of collections for everyday tasks, science, fun, and pretty much everything else.</p>
-	</div>
+        <div class="span12">
+          <!-- Special typography from Bootstrap for lead paragraph. -->
+          <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
+          <p class="lead">Collectr allows you to harness the power of collections for everyday tasks, science, fun, and pretty much everything else.</p>
+        </div>
       </div>
       <div class="row-fluid pitch">
-	<div class="span5 offset1 video">
-	  <img class="img-polaroid" src="http://placehold.it/480x300">
-	</div>
-	
-	<!-- define a new 'actions' div to contain statistics, order, and share buttons -->
-	<div class="span5 actions">
-	  <div class="span8 offset2">
-	    <div class="statistics">
-	      <div class="span4">
-		<div class="linediv-l">
-		  <h3>1000</h3> <p>backers</p>
-		</div>
-	      </div>
-	      <div class="span4">
-		<div class="linediv-c">
-		  <h3>$6000</h3> <p>of $10,000</p>
-		</div>
-	      </div>
-	      <div class="span4">
-		<div class="linediv-r">
-		  <h3>10</h3> <p>days left</p>
-		</div>
-	      </div>
-	    </div>
-	  </div>
-	  <div class="span10 offset1">
-	    <div class="thermometer progress active">
-	      <div class="bar bar-success" style="width: 60%;"></div>
-	      <div class="bar bar-warning" style="width: 40%;"></div>
-	    </div>
-	  </div>
-	  <div class="span6 offset3 order">
-	    <button class="btn btn-success btn-large">Preorder</button>
-	  </div>
-	  <div class="span8 offset2 social">
-	    <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-	    <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
-	  </div>
-      </div>
-    </div>
+        <div class="span5 offset1 video">
+          <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300">
+        </div>
 
-    <div class="row-fluid section1">
-      <div class="span5 offset1 asset">
-	<img class="img-polaroid" src="http://placehold.it/480x300">
+        <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
+        <div class="span5 actions">
+          <div class="row-fluid">
+          <div class="span8 offset2">
+            <div class="row-fluid statistics">
+              <div class="span4">
+                <!-- linediv-l and linediv-r give dividing lines that look
+                different in horizontal and vertical layouts, illustrating
+                media queries. -->
+                <div class="linediv-l">
+                <h3>1000</h3> <p>backers</p>
+                </div>
+              </div>
+              <div class="span4">
+                <div class="linediv-c">
+                  <h3>$6000</h3> <p>of $10,000</p>
+                </div>
+              </div>
+              <div class="span4">
+                <div class="linediv-r">
+                <h3>10</h3> <p>days left</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row-fluid">
+          <div class="span10 offset1">
+            <!-- Bootstrap progress bar -->
+            <!-- http://twitter.github.io/bootstrap/components.html#progress -->
+            <div class="thermometer progress active">
+              <div class="bar bar-success" style="width: 60%;"></div>
+              <div class="bar bar-warning" style="width: 40%;"></div>
+            </div>
+          </div>
+          </div>
+          <div class="row-fluid">
+          <div class="span6 offset3 order">
+            <!-- Standard Bootstrap button. -->
+            <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
+            <button class="btn btn-success btn-large">Preorder</button>
+          </div>
+          </div>
+          <div class="row-fluid">
+          <div class="span8 offset2 social">
+            <!-- Social buttons are not included in default Bootstrap. -->
+            <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
+            <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
+            <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+          </div>
+          </div>
+        </div>
+        </div>
       </div>
-      <div class="span5 copy">
-	<p>
-Want to know more about Northern New England trees? Don't know a beagle from a mastiff? Curious about the significance of your pocket change? Download a collection template, fill it with photos of the relevant items, and learn in the process. You get all the benefits of a physical collection, but without the hassle of managing a bunch of annoying objects. Best of all, you always have your collection with you. 
-        </p>
-      </div>
-    </div>
 
-    <div class="row-fluid section2">
-      <div class="span5 offset1 copy copy-right">
-	<p>
+      <!-- Beyond this part the marketing copy begins. -->
+      <!-- https://developer.mozilla.org/en-US/docs/Web/CSS/text-align -->
+      <!-- http://twitter.github.io/bootstrap/base-css.html#images -->
+      <!-- http://placehold.it -->
+      <div class="row-fluid section1">
+        <div class="span5 offset1 asset">
+          <img class="img-polaroid"  alt="Placeholder" src="http://placehold.it/480x300">
+        </div>
+        <div class="span5 copy">
+          <p>
+            Want to know more about Northern New England trees? Don't know a beagle from a mastiff? Curious about the significance of your pocket change? Download a collection template, fill it with photos of the relevant items, and learn in the process. You get all the benefits of a physical collection, but without the hassle of managing a bunch of annoying objects. Best of all, you always have your collection with you.
+          </p>
+        </div>
+      </div>
+
+      <div class="row-fluid section2">
+        <div class="span5 offset1 copy copy-right">
+          <p>
 You can compete against others to complete collections in the shortest time, or make the most comprehensive collection. Collectr lets you make challenges to test your friends, and collections to better collaborate.
-        </p>
-	<p>
-With some creativity, you can apply the power of collections to nearly every area of your life. A collection is a great way to organize your travel itinerary-you know exactly what you still want to see, and when you get back, all your photographs are right there, neatly organized for you. If you're a fashionista and a shopaholic, you can use collectr to keep track of what's in your wardrobe, and, in the store, you can quickly match pieces to what you already own.
-        </p>
-      </div>
-      <div class="span5 asset">
-	<img class="img-polaroid" src="http://placehold.it/480x360">
-      </div>
-    </div>
-    
-    <!-- FAQ uses jquery.js and bootstrap.js to create an accordion effect -->
-    <div class="row-fluid faq">
-      <div class="span10 offset1">
-	<h3>FAQ</h3>
-	<div class="accordion" id="accordion2">
-	  <div class="accordion-group">
-	    <div class="accordion-heading">
-	      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-		What is Collectr?
-	      </a>
-	    </div>
-	    <div id="collapseOne" class="accordion-body collapse">
-	      <div class="accordion-inner">
-		A new paradigm in play.
-	      </div>
-	    </div>
-	  </div>
-	  <div class="accordion-group">
-	    <div class="accordion-heading">
-	      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-		What platforms does Collectr support?
-	      </a>
-	    </div>
-	    <div id="collapseTwo" class="accordion-body collapse">
-	      <div class="accordion-inner">
-		Collectr supports any system capable of displaying HTML5, including OS X, most versions of Windows, most Linux systems, Android phones, and iOS.
-	      </div>
-	    </div>
-	  </div>
-	</div>
-      </div>
-    </div>
 
-    <div class="row-fluid footer">
-      <div class="span12">
-	<p>Copyright (C) 2013 Michael Gaffney</p>
+With some creativity, you can apply the power of collections to nearly every area of your life. A collection is a great way to organize your travel itinerary-you know exactly what you still want to see, and when you get back, all your photographs are right there, neatly organized for you. If you're a fashionista and a shopaholic, you can use collectr to keep track of what's in your wardrobe, and, in the store, you can quickly match pieces to what you already own.
+
+          </p>
+        </div>
+        <div class="span5 asset">
+          <img class="img-polaroid"  alt="Placeholder" src="http://placehold.it/480x300">
+        </div>
+      </div>
+
+      <!-- For the FAQ, we introduce a little bit of JS, using the accordion. -->
+      <!-- This brings in jquery.js and bootstrap.js as dependencies. -->
+      <!-- http://twitter.github.io/bootstrap/javascript.html#collapse -->
+      <div class="row-fluid faq">
+          <div class="span10 offset1">
+            <h3>FAQ</h3>
+            <div class="accordion" id="accordion2">
+              <div class="accordion-group">
+                <div class="accordion-heading">
+                  <a class="accordion-toggle" data-toggle="collapse"
+                     data-parent="#accordion2" href="#collapseOne">
+                    What is Collectr?
+                  </a>
+                </div>
+                <div id="collapseOne" class="accordion-body collapse">
+                  <div class="accordion-inner">
+                    A new paradigm.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-group">
+                <div class="accordion-heading">
+                  <a class="accordion-toggle" data-toggle="collapse"
+                     data-parent="#accordion2" href="#collapseTwo">
+                    Which platforms does Collect support?
+                  </a>
+                </div>
+                <div id="collapseTwo" class="accordion-body collapse">
+                  <div class="accordion-inner">
+                    Collectr supports any system capable of displaying HTML5, including OS X, most versions of Windows, most Linux systems, Android phones, and iOS.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+      </div>
+
+      <!-- Not crucial, but we put this under a CC By-SA 3.0 license. -->
+      <!-- http://creativecommons.org/licenses/ -->
+      <div class="row-fluid footer">
+        <div class="span12">
+          <p>Copyright (C) 2013 Michael Gaffney/p>
+        </div>
       </div>
     </div>
-   </div>
   </body>
 </html>
